--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,8 @@ h1 {
 	font-weight: lighter;
 	text-align: center;
 	padding-top: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
+	font-size: 45px;
 }
 
 #main {
@@ -36,5 +37,5 @@ h1 {
 }
 
 #list {
-	padding-top: 10px;
+	padding-top: 30px;
 }
