--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
 	
 	<body>
 		<div id = "main">
-			<h1>List of things to do</h1>	
+			<h1>Insert the thing to do</h1>	
 			<div id = "inputting">
 				<form action="/things" method="POST">
 					<input type="text" placeholder="Thing to Do" name="thing_to_do" autocomplete = "off">
